@@ -423,72 +423,6 @@ Max kernel policy version:      26</programlisting>
         <para>For more information on enabling grSecurity, see the Gentoo
         grSecurity v2 Guide.</para>
       </section>
-
-      <section>
-        <title>Security benchmark</title>
-
-        <para>As mentioned earlier, we will try to provide security benchmarks
-        for the services that we configure. The security benchmark for Gentoo
-        Linux currently contains checks for</para>
-
-        <itemizedlist>
-          <listitem>
-            <para>mount options</para>
-          </listitem>
-
-          <listitem>
-            <para>kernel configuration options (including those for PaX and
-            grSecurity)</para>
-          </listitem>
-
-          <listitem>
-            <para>SSH daemon configuration</para>
-          </listitem>
-
-          <listitem>
-            <para>general system settings and mandatory USE flags</para>
-          </listitem>
-
-          <listitem>
-            <para>state of unsecure services</para>
-          </listitem>
-
-          <listitem>
-            <para>bootloader configuration protection</para>
-          </listitem>
-
-          <listitem>
-            <para>authorization settings</para>
-          </listitem>
-
-          <listitem>
-            <para>file and directory privileges</para>
-          </listitem>
-        </itemizedlist>
-
-        <para>I am still planning on extending the benchmarks further and
-        further, but also to provide proper ways to automatically enforce
-        these settings.</para>
-
-        <para>To verify the state of your system against the given benchmark,
-        we first generate the necessary output (as the test is not allowed to
-        execute commands itself, so we need to prepare the output
-        first).</para>
-
-        <programlisting># <command>mkdir /var/tmp/genoval_output</command>
-# <command>export GENOVAL_SCRIPTOUTPUTDIR=/var/tmp/genoval_output</command>
-# <command>emerge --info --verbose &gt; ${GENOVAL_SCRIPTOUTPUTDIR}/emerge-info-verbose</command>
-# <command>zcat /proc/config.gz &gt; ${GENOVAL_SCRIPTOUTPUTDIR}/kernel-config</command></programlisting>
-
-        <para>Next, you can run the tests and see if your system is configured
-        properly:</para>
-
-        <programlisting># <command>oscap xccdf eval --profile Gentoo-Default scap-gentoo-xccdf.xml</command></programlisting>
-
-        <para>You can generate an HTML report too</para>
-
-        <programlisting># <command>oscap xccdf eval --profile Gentoo-Default --results xccdf-results.xml --report report.html scap-gentoo-xccdf.xml</command></programlisting>
-      </section>
     </section>
 
     <section>
