@@ -1,3 +1,6 @@
+** (2012-05-13) Sven Vermeulen <sven.vermeulen@siphos.be>
+	- Drop references to security benchmark, too little time :-(
+
 ** (2012-04-22) Sven Vermeulen <sven.vermeulen@siphos.be>
 	- Update on JBoss
 
